# Novacore

./: Cargo.toml  README.md  shell.nix
examples/: forthcore.core  minivm.nc
src/: main.rs
src/novacore/: core.rs  debugger.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs  state.rs  utilities.rs
src/novacore/core/: mod.rs
src/novacore/core_ops/: casting.rs  comparison.rs  control.rs  create.rs  io.rs  list.rs  logical.rs  math.rs  mod.rs  modifier.rs  operator.rs  random.rs  reg.rs  shuffle.rs  terminal.rs  time.rs
src/novacore/debugger/: mod.rs
src/novacore/evaluator/: mod.rs
src/novacore/lexer/: mod.rs
src/novacore/parser/: mod.rs
src/novacore/state/: mod.rs
src/novacore/utilities/: mod.rs
std/: math.core  std.core
