[package]
name = "novacore"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.2.4"
rustyline = "10.0.0"
colored = "2.0.0"
ureq = "2.4.0"
rand = "0.8.5"
modulo = "0.1.2"
hashbrown = "0.12"
rustyline-derive = "0.7.0"
crossterm = "0.25.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = true

[build]
rustflags = ["-Awarnings"]
