[package]
name = "novacore"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.2.4"
rustyline = "11.0.0"
colored = "2.0.0"
ureq = "2.4.0"
rand = "0.8.5"
modulo = "0.1.2"
hashbrown = "0.13.2"
rustyline-derive = "0.8.0"
crossterm = "0.26.1"
num-bigint = "0.4.3"
fxhash = "0.2.1"

[profile.release]
opt-level = 3

[build]
rustflags = ["-Awarnings"]

[profile.dev]
debug = true